# talent-plan

./: .gitignore  .gitmodules  flake.nix
courses/rust/projects/project-1/: Cargo.toml  build.rs
courses/rust/projects/project-1/proto/: message.proto
courses/rust/projects/project-1/src/: client.rs  error.rs  executor.rs  fs.rs  kv.rs  lib.rs  readv_all.rs  server.rs  util.rs  xchg.rs
courses/rust/projects/project-1/tests/: test2.rs
courses/rust/projects/project-2/: Cargo.toml
courses/rust/projects/project-2/src/: error.rs
