[package]
name = "kvs"
version = "0.1.0"
authors = ["Yilin Chen <sticnarf@gmail.com>"]
description = "A key-value store"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
bytes = "1.4.0"
chrono = "0.4.24"
clap = { version = "4.1.13", features = ["derive"] }
crc32fast = "1.3.2"
crossbeam-skiplist = "0.1.1"
flume = "0.10.14"
futures = "0.3.28"
libc = "0.2.141"
num_cpus = "1.15.0"
once_cell = "1.17.1"
serde_json = "1.0.96"
tempfile = "3.4.0"
thiserror = "1.0.40"
walkdir = "2.3.3"

[target.'cfg(target_os = "macos")'.dependencies]
monoio = { path = "third_party/monoio/monoio", featuers = ["async-cancel", "bytes", "legacy", "macros", "utils"] }

[target.'cfg(target_os = "linux")'.dependencies]
monoio = { path = "third_party/monoio/monoio", featuers = ["async-cancel", "bytes", "iouring", "macros", "utils"] }

[dev-dependencies]
assert_cmd = "2.0.10"
predicates = "3.0.2"
