[package]
name = "kvs"
version = "0.1.0"
authors = ["Yilin Chen <sticnarf@gmail.com>"]
description = "A key-value store"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
bytes = "1.4.0"
chrono = "0.4.24"
clap = { version = "4.1.13", features = ["derive"] }
crc32fast = "1.3.2"
crossbeam-skiplist = "0.1.1"
flume = "0.10.14"
futures = "0.3.28"
libc = "0.2.141"
num_cpus = "1.15.0"
once_cell = "1.17.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.4.0"
thiserror = "1.0.40"
walkdir = "2.3.3"
tokio-uring = { path = "third_party/tokio-uring", featuers = ["bytes"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "test-util", "macros"] }
tarpc = { version = "0.33.0", features = ["serde", "tokio-serde", "unix", "serde-transport-bincode", "full"] }
pin-project = "1.1.0"
glommio = { version = "0.8.0", features = ["debugging"] }

[dev-dependencies]
assert_cmd = "2.0.10"
predicates = "3.0.2"
