[package]
name = "kvs"
version = "0.1.0"
authors = ["Yilin Chen <sticnarf@gmail.com>"]
description = "A key-value store"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
bytes = "1.4.0"
chrono = "0.4.24"
clap = { version = "4.1.13", features = ["derive"] }
crc32fast = "1.3.2"
crossbeam-skiplist = "0.1.1"
flume = "0.10.14"
futures = "0.3.28"
libc = "0.2.141"
num_cpus = "1.15.0"
once_cell = "1.17.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.4.0"
thiserror = "1.0.40"
walkdir = "2.3.3"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "test-util", "macros"] }
pin-project = "1.1.0"
monoio = { path = "third_party/monoio/monoio", features = ["macros"]}
tonic = { git = "https://github.com/Congee/tonic.git" }
prost = "0.11.9"
hyper = "0.14.26"
tower = "0.4.13"

[dev-dependencies]
assert_cmd = "2.0.10"
predicates = "3.0.2"

[build-dependencies]
tonic-build = "0.9"
prost-build = "*"
