[package]
name = "kvs"
version = "0.1.0"
authors = ["Yilin Chen <sticnarf@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
failure = "0.1.8"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"

[dev-dependencies]
assert_cmd = "2.0.10"
predicates = "3.0.1"
tempfile = "3.4.0"
walkdir = "2.3.3"
